Tests/PySwiftASTTests/Resources/syntax_errors/unexpected_indent.py
# Unexpected indent at top level
x = 1
    y = 2  # This should not be indented
z = 3
